--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4",
-        "naka1205/phpsocket": "^1.5"
+        "naka1205/phpsocket": "^1.7",
+        "naka1205/phpkoa_static": "^1.1"
     },
     "autoload": {
         "psr-4": {
